# ChangeLog for app-text/acroread
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.143 2010/03/07 01:38:13 tgurr Exp $

  07 Mar 2010; Timo Gurr <tgurr@gentoo.org> -acroread-9.3.ebuild:
  Remove vulnerable version wrt bug #306429.

  05 Mar 2010; Pacho Ramos <pacho@gentoo.org> acroread-9.3.1.ebuild:
  stable amd64, security bug 306429

  04 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  acroread-9.3.1.ebuild:
  stable x86, security bug 306429

*acroread-9.3.1 (03 Mar 2010)

  03 Mar 2010; Timo Gurr <tgurr@gentoo.org> -acroread-9.2.ebuild,
  +acroread-9.3.1.ebuild:
  Version bump, fixing security issues bug #306429 and typo bug #303907.
  Remove old.

  09 Feb 2010; Pacho Ramos <pacho@gentoo.org> acroread-9.3.ebuild:
  amd64 stable, security bug 297385

  07 Feb 2010; Christian Faulhammer <fauli@gentoo.org> acroread-9.3.ebuild:
  stable x86, security bug 297385

*acroread-9.3 (15 Jan 2010)

  15 Jan 2010; Timo Gurr <tgurr@gentoo.org> +acroread-9.3.ebuild:
  Version bump, wrt security bug #297385 (CVE-2009-4324).

  27 Oct 2009; Alex Legler <a3li@gentoo.org> -acroread-9.1.3.ebuild:
  Non-maintainer commit: Removing vulnerable version, security bug 289016.

  24 Oct 2009; Christian Faulhammer <fauli@gentoo.org> acroread-9.2.ebuild:
  x86 stable, security bug 289016

  24 Oct 2009; Romain Perier <mrpouet@gentoo.org>
  acroread-9.2.ebuild:
  Stable for amd64 due to multiple vulnerabilities fixed, per bug #289016.

*acroread-9.2 (21 Oct 2009)

  21 Oct 2009; Timo Gurr <tgurr@gentoo.org> -acroread-8.1.6.ebuild,
  -acroread-9.1.2.ebuild, +acroread-9.2.ebuild:
  Version bump, remove old.

  01 Aug 2009; Markus Meier <maekke@gentoo.org> acroread-9.1.3.ebuild:
  amd64/x86 stable, bug #278813

*acroread-9.1.3 (31 Jul 2009)

  31 Jul 2009; Timo Gurr <tgurr@gentoo.org> -acroread-8.1.4.ebuild,
  +acroread-9.1.3.ebuild:
  Version bump, fixes 9.x only security issue (CVE-2009-1862), see bug