@@ -3,6 +3,11 @@ DIST AdbeRdr9.3.1-1_i486linux_deu.tar.bz2 65917500 RMD160 5f6f4094457850a1bea0dd
 DIST AdbeRdr9.3.1-1_i486linux_enu.tar.bz2 60275889 RMD160 41fe1b8da25ccedfef2881fb0668e9a531fc1ab2 SHA1 2473652af21ea3718ad74f31ebd198c9b1c95ccb SHA256 10e8c8abc427e5609ed2891dde072fd1f35cd828b13c968d853ec5b27f4d9667
 DIST AdbeRdr9.3.1-1_i486linux_fra.tar.bz2 64534236 RMD160 1671518a127d50f02b03756a33a8725ca26dc457 SHA1 9eb67b289e0d67c8379719521fd33e4737479378 SHA256 ccd866658fe44bd30613c114c058bbe2699d1997b34fd3d188003e7887b81df4
 DIST AdbeRdr9.3.1-1_i486linux_jpn.tar.bz2 68431169 RMD160 f77898479a2bdf02b4fdb67b544f1b8747b8aebb SHA1 95668e96868da618a6473852008cc3338d28e8f7 SHA256 f8d0c6595c899c7ef11dc4c848dbcc860e53fe3a9c49a05674885c4432d2ec8b
+DIST AdbeRdr9.3.2-1_i486linux_deu.tar.bz2 65857336 RMD160 72fb7cd7772ef9723638f8b7ab976e7280ac9d3c SHA1 4a03482311712f9d2a74c7439e595be2419e6f8d SHA256 76e2f0a71c13b77341f140594f1da7ac51f163b5e692bae65d4c71bf9e7dae3d
+DIST AdbeRdr9.3.2-1_i486linux_enu.tar.bz2 60210433 RMD160 8cae12012c104b9515d81ee28d059344f3e61ec6 SHA1 5849892c613c6ae4deacab57c7edbf1ee03276f5 SHA256 61beab723bbb584c473a8e4ca7700ad13e196f7ea5308dc2d22c66c4ec335f0f
+DIST AdbeRdr9.3.2-1_i486linux_fra.tar.bz2 64553411 RMD160 c07a4cf20e10b6845bb4e3904a97790ad1992696 SHA1 92bb9aee637b2137f0218387d855a497375c6a85 SHA256 d7031c75c3423085e9fa7cfd55bb7caf31582f2354e086d862718ab8b46386aa
+DIST AdbeRdr9.3.2-1_i486linux_jpn.tar.bz2 68422530 RMD160 24a917782190d245bcb4ac758ef64318563dcd23 SHA1 41cd50c99b8e5cced7c0a4f15807840bebcd1023 SHA256 c4c4cd79261fac8f6ce579f67e3e53b2413f0b863c68474ef347394b6a17b90f
 EBUILD acroread-9.3.1.ebuild 8033 RMD160 7da14ea44d73369f8b4930ee6ea24369dbd3390d SHA1 d5cc8d16c2059babbdd18f746c32a47b03b1e095 SHA256 a21b9ec2f69803670eff4ecf4f9f3c8a7127d0bce6511b723a5c5604b2230473
-MISC ChangeLog 24860 RMD160 88eec1d17acfa67ba2173a7c1362c322c2e7d6c6 SHA1 99de981982d11406b6c9e60e4d52133cfea22746 SHA256 47ac267a6414c0f01a8cc1b831f946a10176a0a08f8adaca32843d918411eaef
+EBUILD acroread-9.3.2.ebuild 8033 RMD160 b2661b1ee673a9e20766fbbb6cd5a0d27c78f7a7 SHA1 09aa49e9fad4d4e52110d1aa62d8e9e08bf51776 SHA256 d021c1dda4e2ba59616484b51a9846624c64a015947a4f303632daca50d9a162
+MISC ChangeLog 25002 RMD160 76fad0387d7270221b853733f11e4562897f5300 SHA1 7c6930d2cca224c8b4d29e516f9302e8b793b13c SHA256 8ad3e3f5e28781fb35366fbcae6bc764d5360331f9fe2d81bb3915ee3524990e
 MISC metadata.xml 161 RMD160 1e5b1e42553c8869b93c4a5448e9a2a2ed9fe525 SHA1 209c6a46e4cdd891980115e42ba419e3799f8088 SHA256 7c85e6739a71f5bb23e8de36c88677d772946e61f7285892f7554e37bd2bca76
