@@ -1,6 +1,11 @@
 # ChangeLog for app-text/acroread
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.143 2010/03/07 01:38:13 tgurr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.144 2010/04/19 20:49:28 tgurr Exp $
+
+*acroread-9.3.2 (19 Apr 2010)
+
+  19 Apr 2010; Timo Gurr <tgurr@gentoo.org> +acroread-9.3.2.ebuild:
+  Version bump, wrt security bug #313343.
 
   07 Mar 2010; Timo Gurr <tgurr@gentoo.org> -acroread-9.3.ebuild:
   Remove vulnerable version wrt bug #306429.
